Bug 28658 - [Gallium/DRI] Occasional Compiz Crashes
Summary: [Gallium/DRI] Occasional Compiz Crashes
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium major
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-21 20:01 UTC by Taylor LeMasurier-Wren
Modified: 2010-08-03 15:18 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Compiz Backtrace (27.28 KB, text/plain)
2010-06-21 20:01 UTC, Taylor LeMasurier-Wren
Details

Description Taylor LeMasurier-Wren 2010-06-21 20:01:12 UTC
Created attachment 36413 [details]
Compiz Backtrace

When using r300g gallium dri with radeon driver from the Xorg-Edgers PPA on Ubuntu Maverick, Compiz occasionally crashes when starting a few programs.

For example, when I start gnome-mplayer, compiz crashes the moment it starts. I've already confirmed that it's unrelated to mplayer itself. When mplayer is run from a terminal or with another frontend (smplayer) it seems to work fine. It's specifically something in the frontend gnome-mplayer that's triggering it.

I know that compiz has crashed several other times, but I've been unable to get reliable crashes like I have with gnome-mplayer. Also, gnome-mplayer has some transparency issues with the gtk-rgba in Maverick, but that might be unrelated.

I've attached a backtrace of compiz using gdb.
Comment 1 Marek Olšák 2010-07-05 18:17:18 UTC
Changing the component to Mesa core because it's a bug in st/dri.
Comment 2 Marek Olšák 2010-08-03 15:18:32 UTC
I've fixed a crash in st/dri. If you still experience any crashes, please reopen.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.